SUBDIRS = parser
lib_LIBRARIES = libsnow.a
libsnow_a_SOURCES = \
	Handle.h \
	Handle.cpp \
	Kernel.h \
	Kernel.cpp \
	MemoryManager.cpp \
	MemoryManager.h \
	GarbageAllocator.h \
	GarbageAllocator.cpp \
	GarbageHeaps.h \
	GarbageHeaps.cpp \
	Garbage.h \
	Garbage.cpp \
	ExecutableAllocator.h \
	ExecutableAllocator.cpp \
	Assembler.cpp \
 	Assembler.h \
 	ASTNode.h \
 	Basic.h \
 	Codegen.cpp \
 	Codegen.h \
 	CompiledCode.cpp \
 	CompiledCode.h \
 	Label.h \
 	Linker.cpp \
 	Linker.h \
 	Operand.h \
 	Util.cpp \
 	Util.h \
 	Scope.h \
 	Iterate.h \
 	RefPtr.h \
 	TempAllocator.h \
 	SuperFastHash.h \
 	SuperFastHash.cpp \
 	Internal.h \
 	LocalMap.h \
 	LocalMap.cpp \
	XMLCodegen.h \
	XMLCodegen.cpp \
	lib/Global.h \
	lib/Global.cpp \
 	lib/Object.cpp \
 	lib/Object.h \
 	lib/Value.h \
 	lib/Function.cpp \
 	lib/Function.h \
 	lib/Runtime.cpp \
 	lib/Runtime.h \
 	lib/Integer.h \
 	lib/Integer.cpp \
 	lib/Nil.h \
 	lib/Nil.cpp \
 	lib/Array.cpp \
 	lib/Array.h \
 	lib/SnowString.cpp \
 	lib/SnowString.h \
 	lib/Scope.h \
 	lib/Scope.cpp \
	lib/Symbol.h \
	lib/Symbol.cpp \
 	lib/ThinObject.cpp \
 	lib/ThinObject.h \
	lib/Float.h \
	lib/Float.cpp \
	lib/Boolean.h \
	lib/Boolean.cpp \
	x86_64/x86_64-Assembler.cpp \
	x86_64/x86_64-Assembler.h \
	x86_64/x86_64-Codegen.h \
	x86_64/x86_64-Codegen.cpp \
	x86_64/x86_64-Operand.h \
	x86_64/x86_64-Disassembler.h \
	x86_64/x86_64-Disassembler.cpp \
	parser/Driver.h \
	parser/Driver.cpp \
	parser/Scanner.h \
	parser/Scanner.cpp \
	parser/Parser.h \
	parser/Parser.cpp

INCLUDES = -I@top_srcdir@/src -I@top_srcdir@/src/parser

