noinst_LTLIBRARIES = libsnow-gc.la
libsnow_gc_la_SOURCES = \
	ExecutableAllocator.cpp \
	ExecutableAllocator.h \
	Garbage.cpp \
	Garbage.h \
	GarbageAllocator.cpp \
	GarbageAllocator.h \
	GarbageHeaps.cpp \
	GarbageHeaps.h \
	MemoryManager.cpp \
	MemoryManager.h \
	TempAllocator.h

INCLUDES = -I@top_srcdir@/src
