noinst_LIBRARIES = libsnow-lib.a
libsnow_lib_a_SOURCES = \
	IncrementalAlloc.cpp \
 	IncrementalAlloc.h \
 	Object.cpp \
 	Object.h \
 	Value.h \
 	Function.cpp \
 	Function.h \
 	Runtime.cpp \
 	Runtime.h \
 	Integer.h \
 	Integer.cpp \
 	Nil.h \
 	Nil.cpp \
 	Array.cpp \
 	Array.h \
 	SnowString.cpp \
 	SnowString.h \
 	Handle.cpp \
 	Handle.h \
 	Garbage.h \
 	Garbage.cpp \
 	Scope.h \
 	Scope.cpp \
 	ThinObject.cpp \
 	ThinObject.h \
	Float.h \
	Float.cpp
 
INCLUDES = -I@top_srcdir@/src
