noinst_LIBRARIES = libsnow-lib.a
libsnow_lib_a_SOURCES = \
	Global.h \
	Global.cpp \
 	Object.cpp \
 	Object.h \
 	Value.h \
 	Function.cpp \
 	Function.h \
 	Runtime.cpp \
 	Runtime.h \
 	Integer.h \
 	Integer.cpp \
 	Nil.h \
 	Nil.cpp \
 	Array.cpp \
 	Array.h \
 	SnowString.cpp \
 	SnowString.h \
 	Scope.h \
 	Scope.cpp \
 	ThinObject.cpp \
 	ThinObject.h \
	Float.h \
	Float.cpp
 
INCLUDES = -I@top_srcdir@/src
