noinst_LTLIBRARIES = libsnow-runtime.la
libsnow_runtime_la_SOURCES = \
	Array.cpp \
	Array.h \
	Boolean.cpp \
	Boolean.h \
	CppStackFrame.h \
	Exception.cpp \
	Exception.h \
	ExternalLibrary.cpp \
	ExternalLibrary.h \
	Float.cpp \
	Float.h \
	Function.cpp \
	Function.h \
	Global.cpp \
	Global.h \
	Handle.cpp \
	Handle.h \
	Hash.cpp \
	Hash.h \
	Integer.cpp \
	Integer.h \
	Kernel.cpp \
	Kernel.h \
	LocalMap.cpp \
	LocalMap.h \
	Nil.cpp \
	Nil.h \
	Numeric.cpp \
	Numeric.h \
	Object.cpp \
	Object.h \
	Runtime.cpp \
	Runtime.h \
	Scope.cpp \
	Scope.h \
	Scope.h \
	SnowString.cpp \
	SnowString.h \
	StackFrame.h \
	Symbol.cpp \
	Symbol.h \
	ThinObject.cpp \
	ThinObject.h \
	Value.h \
	ValueMap.h

INCLUDES = -I@top_srcdir@/src
